--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,22 @@
   }
 }
 
+@keyframes logo-bounce {
+  from {
+    translate: 1em 0;
+  }
+
+  to {
+    translate: -1em -1em;
+  }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
+  }
+  a:nth-of-type(2) .logo {
+    animation: logo-bounce infinite 1s linear;
   }
 }
 
